# mcp-job-search-agent

./: .gitignore  LICENSE  README.md  Visualization.md  cv.example.txt  example-prompts.md  pyproject.toml
.cursor/rules/: mcp-job-search-agent.mdc
src/mcp_job_search/: __init__.py  cv_matcher.py  finn_client.py  job_utils.py  models.py  nav_client.py  server.py  tracker.py
tests/: test_core.py  test_cv_matcher.py  test_job_utils.py
